--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^5.3.0",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
